--- a/google-spreadsheet/pom.xml
+++ b/google-spreadsheet/pom.xml
@@ -168,6 +168,12 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.mule.transports</groupId>
+			<artifactId>mule-transport-http</artifactId>
+			<version>${mule.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.mule.modules</groupId>
 			<artifactId>mule-module-spring-config</artifactId>
 			<version>${mule.version}</version>
